--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out",
+    "types": [],
     "noEmit": false,
     "declaration": true,
     "declarationMap": true
