--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,10 @@ jobs:
         uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
-
+      - name: Build
+        run: Deno task ci:build
+      - name: Check Api
+        run: pnpm run api:check
       - name: Check tag
         if: ${{ github.ref_name=='main'}}
         id: check_tag
