--- a/api-extractor.jsonc
+++ b/api-extractor.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/api-extractor/v7/api-extractor.schema.json",
 
-  "mainEntryPointFilePath": "<projectFolder>/out/mod.d.ts",
+  "mainEntryPointFilePath": "<projectFolder>/dist/mod.d.ts",
   "bundledPackages": [],
   "compiler": {
     "tsconfigFilePath": "<projectFolder>/tsconfig.json",
