--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           deno-version: v1.x
       - name: Build
-        run: Deno task ci:build
+        run: deno task ci:build
       - name: Check Api
         run: pnpm run api:check
       - name: Check tag
