--- a/deno.json
+++ b/deno.json
@@ -2,9 +2,8 @@
   "nodeModulesDir": false,
   "lock": false,
   "tasks": {
-    "ci:build": "deno task build dist/mod.js",
-    "build": "deno run -A scripts/build.ts",
-    "versionSnapshot": "deno task build benchmark/dist/before.js",
-    "start_bench_ui": "deno run -A scripts/start_ui.ts"
-  }
+    "ci:build": "deno run -A scripts/build.ts",
+    "previous_version": "deno run -A scripts/previous_version.ts"
+  },
+  "importMap": "./scripts/bench_ui/import_map.json"
 }
