--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "name": "Eavid",
     "url": "https://github.com/ieavid"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@eavid/vitest-tool": "^1.0.2"
+  }
 }
