--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      publish: ${{steps.check_tag.outputs.return}}
+      publish: ${{steps.check_tag.outputs.tags}}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,25 +21,16 @@ jobs:
           run_install: true
       - name: Test
         run: pnpm ci:test
-      - name: Setup Deno
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.x
       - name: Build
-        run: deno task ci:build
+        run: pnpm run ci:build
       - name: Check Api
         run: pnpm run api:check
-      - name: Check tag
-        if: ${{ github.ref_name=='main'}}
+
+      - name: Check Tag
         id: check_tag
-        uses: asnowc/actions@deno-script/v1
+        uses: asnowc/actions@check-tags/v1
         with:
-          script: |
-            import { writeNewTagToOutput } from "https://cdn.jsdelivr.net/gh/dnpack/action-script@0.3.x/cmd/github_repo.ts";
-            const str = await Deno.readTextFile("./package.json");
-            const version = JSON.parse(str).version;
-            await writeNewTagToOutput("v" + version, "return");
-          args: -A --no-lock
+          file: package.json
   publish:
     runs-on: ubuntu-latest
     needs: build
@@ -48,24 +39,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup NodeJS
-        uses: actions/setup-node@v3
+        uses: asnowc/actions@setup-node/v2
         with:
-          node-version: 20
-          registry-url: https://registry.npmjs.org
+          node_v: 20
+          pnpm_v: 8
+          run_install: true
+      - name: Build
+        run: pnpm run ci:build
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
           deno-version: v1.x
-      - name: Build
-        run: deno task ci:build
       - name: Publish
         uses: asnowc/actions@deno-script/v1
         with:
           script: |
-            import { tagPublishFlow } from "https://cdn.jsdelivr.net/gh/dnpack/action-script@0.3.x/cmd/github_repo.ts";
+            import { tagsPublishFlow } from "https://cdn.jsdelivr.net/gh/dnpack/action-script@0.3.x/cmd/github_repo.ts";
             import { execCmdSync } from "https://cdn.jsdelivr.net/gh/dnpack/action-script@0.3.x/lib.ts";
 
-            await tagPublishFlow("NEW_TAG", () => execCmdSync("npm", ["publish"], { exitIfFail: true }));
+            await tagsPublishFlow("NEW_TAG", () => execCmdSync("npm", ["publish"], { exitIfFail: true }));
           args: -A --no-lock
         env:
           NEW_TAG: ${{needs.build.outputs.publish}}
