--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "benchmark": "vitest bench --watch false",
     "ci:test": "vitest run",
+    "ci:build": "pnpm rollup -c",
     "test": "vitest",
     "api:check": "api-extractor run -c api-extractor.jsonc -v",
     "api:check-local": "pnpm run api:check -l"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.39.1",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.10.6",
     "@vitest/coverage-v8": "^1.1.3",
     "@vitest/ui": "^1.1.3",
+    "rollup": "^4.9.5",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vitest": "^1.1.3"
   },
