--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jbod",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "",
   "type": "module",
   "scripts": {
@@ -20,7 +20,8 @@
     "rollup": "^4.9.5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.3"
+    "vitest": "^1.1.3",
+    "@eavid/vitest-tool": "^1.0.2"
   },
   "exports": {
     ".": {
@@ -42,7 +43,5 @@
     "url": "https://github.com/ieavid"
   },
   "license": "MIT",
-  "dependencies": {
-    "@eavid/vitest-tool": "^1.0.2"
-  }
+  "dependencies": {}
 }
