--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "api:check-local": "pnpm run api:check -l"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.39.1",
+    "@microsoft/api-extractor": "^7.39.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^20.10.6",
-    "@vitest/coverage-v8": "^1.1.3",
-    "@vitest/ui": "^1.1.3",
-    "rollup": "^4.9.5",
+    "@types/node": "^20.11.15",
+    "@vitest/coverage-v8": "^1.2.2",
+    "@vitest/ui": "^1.2.2",
+    "rollup": "^4.9.6",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.3"
+    "vitest": "^1.2.2"
   },
   "exports": {
     ".": {
@@ -42,7 +42,5 @@
     "url": "https://github.com/ieavid"
   },
   "license": "MIT",
-  "dependencies": {
-    "@eavid/vitest-tool": "^1.0.2"
-  }
+  "dependencies": {}
 }
