chore: 删除无用 npm scripts 命令

--- a/deno.json
+++ b/deno.json
@@ -2,9 +2,7 @@
   "nodeModulesDir": false,
   "lock": false,
   "tasks": {
-    "previous_version": "deno run -A scripts/previous_version.ts",
-    "version_snapshots": "deno run -A scripts/version_snapshots.ts",
-    "bench_ui": "deno run -A scripts/start_ui.ts"
+    "version_snapshots": "deno run -A scripts/version_snapshots.ts"
   },
   "imports": {
     "@eavid/vitest-tool/bench": "npm:@eavid/vitest-tool@1.2.3/bench",
