--- a/api-extractor.jsonc
+++ b/api-extractor.jsonc
@@ -47,6 +47,10 @@
     // "tsdocMetadataFilePath": "<projectFolder>/dist/tsdoc-metadata.json"
   },
   "messages": {
-    "tsdocMessageReporting": {}
+    "tsdocMessageReporting": {
+      "tsdoc-malformed-tag-name": {
+        "logLevel": "none"
+      }
+    }
   }
 }
