--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,8 +14,8 @@
     },
     {
       "label": "Benchmark ui",
-      "command": "deno run -A benchmark/utils/chart_ui.ts",
-      "detail": "deno run -A benchmark/utils/chart_ui.ts",
+      "command": "deno run -A benchmark/ui/chart_ui.ts",
+      "detail": "deno run -A benchmark/ui/chart_ui.ts",
       "type": "shell",
       "args": [],
       "presentation": {
