--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jbod",
-  "version": "0.4.5",
-  "description": "",
+  "version": "0.4.6",
+  "description": "JavaScript Binary Serialization and deserialization. Support for more JS data types",
   "type": "module",
   "types": "./dist/mod.d.ts",
   "scripts": {
