refactor: 目录结构更改

--- a/api-extractor.jsonc
+++ b/api-extractor.jsonc
@@ -22,8 +22,8 @@
   "apiReport": {
     "enabled": true,
     "reportFileName": "<unscopedPackageName>.api.md",
-    "reportFolder": "<projectFolder>/api/",
-    "reportTempFolder": "<projectFolder>/api/temp/"
+    "reportFolder": "<projectFolder>/docs/api/",
+    "reportTempFolder": "<projectFolder>/docs/api/temp/"
     // "includeForgottenExports": false
   },
 
