--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "target": "ES2017",
+    "target": "ESNext",
     "lib": ["ESNext"],
     "strict": true,
     "allowImportingTsExtensions": true,
@@ -16,5 +16,5 @@
     }
   },
 
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "./benchmark", "./scripts"]
 }
