--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   ],
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "registry": "https://registry.npmjs.org",
+    "provenance": true
   },
   "keywords": [
     "json",
