--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Publish
-        run: npx jsr publish
+        run: npx jsr publish --config jsr.json
