--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "api:check": "api-extractor run -c api-extractor.jsonc -v"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.39.4",
+    "@microsoft/api-extractor": "^7.47.0",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/node": "^20.11.15",
-    "@vitest/coverage-v8": "^1.2.2",
-    "@vitest/ui": "^1.2.2",
-    "rollup": "^4.9.6",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.2"
+    "@types/node": "^20.14.9",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
+    "rollup": "^4.18.0",
+    "tslib": "^2.6.3",
+    "typescript": "^5.5.3",
+    "vitest": "^1.6.0"
   },
   "repository": {
     "type": "git",
@@ -49,6 +49,5 @@
     "name": "Eavid",
     "url": "https://github.com/eavidy"
   },
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
