--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,31 +9,68 @@ permissions:
   id-token: write
 
 jobs:
-  publish-npm:
+  check:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{fromJson(env.PACKAGE_JSON).version}}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup NodeJS
         uses: asnowc/actions@setup-node/v2
         with:
-          node_v: 20
+          node_v: 22
           pnpm_v: 9
           run_install: true
       - name: Build
         run: pnpm run ci:build
       - name: Check Api
-        run: pnpm run api:check
+        run: pnpm run ci:check-api
+      - name: Read packageJson
+        run: |
+          {
+            echo 'PACKAGE_JSON<<EOF' 
+            cat ./package.json
+            echo EOF
+          } >>  $GITHUB_ENV
+      - name: Package npm
+        run: |
+          npm pack
+          mv cpcall-${{fromJson(env.PACKAGE_JSON).version}}.tgz npm-package.tgz
+      - name: Upload npm package
+        uses: actions/upload-artifact@v4
+        with:
+          name: npm-package
+          path: |
+            npm-package.tgz
+          retention-days: 3
+
+  publish-npm:
+    needs: check
+    runs-on: ubuntu-latest
+    steps:
+      - name: download
+        uses: actions/download-artifact@v4
+        with:
+          name: npm-package
+      - name: Unpack
+        run: tar -zxvf npm-package.tgz
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          registry-url: https://registry.npmjs.org
       - name: Publish
-        run: pnpm publish --no-git-checks
+        run: npm publish
+        working-directory: ./package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish-jsr:
     runs-on: ubuntu-latest
-    needs: publish-npm
+    needs: check
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Publish
-        run: npx jsr publish --config jsr.json
+        run: npx jsr publish
