--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,10 @@
 {
+  "name": "@asn/jbod",
+  "version": "0.5.0",
+  "exports": "./src/mod.ts",
+  "publish": {
+    "include": ["LICENSE", "README.md", "src/**/*.ts"]
+  },
   "nodeModulesDir": false,
   "lock": false,
   "tasks": {
