ci: publish 流程限制仓库

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   check:
+    if: github.repository_owner=='asnowc'
     runs-on: ubuntu-latest
     outputs:
       version: ${{fromJson(env.PACKAGE_JSON).version}}
