--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
+    "lib": ["ES2017", "ES2022.Error", "ES2020.BigInt"],
     "outDir": "../out",
     "target": "ES2017",
     "types": [],
